--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <div class="title">
 kodkodcad
 </div>
-<div>
+<div id="main" style="float:left;">
   <canvas id="mainCanvas" width="1000" height="1000"></canvas>
 </div>
+<div id="command" style="float:left;width:200px;height:1000px;border: solid 1px #000">
+  
+<div>
 </body>
 </html>
