--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
+<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 <script data-main="main.js" src="js/require.js"></script>
 </head>
 <body>
 <div class="title">
 kodkodcad
+</div>
+<div id="commands" style="float:left;width:1000px;height:105px;border: solid 1px #000">
 </div>
 <div id="main" style="float:left;">
   <canvas id="mainCanvas" width="1000" height="1000"></canvas>
