--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@ kodkodcad
 <div id="commands" style="float:left;width:1000px;height:105px;border: solid 1px #000">
 </div>
 <div id="main" style="float:left;">
-  <canvas id="mainCanvas" width="1000" height="1000"></canvas>
+  <canvas id="mainCanvas" width="1280" height="900"></canvas>
+  <div class="window" id="window1" style="top:0px;left:0px;width:600px;height:440px;"></div>
+  <div class="window" id="window2" style="top:0px;left:602px;width:600px;height:440px;"></div>
+  <div class="window" id="window3" style="top:445px;left:0px;width:600px;height:440px;"></div>
+  <div class="window" id="window4" style="top:445px;left:602px;width:600px;height:440px;"></div>
 </div>
 <div id="command" style="float:left;width:200px;height:1000px;border: solid 1px #000">
   
