--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div class="title">
 kodkodcad
 </div>
-<div id="commands" style="float:left;width:1000px;height:105px;border: solid 1px #000">
+<div id="commands">
 </div>
 <div id="main" style="float:left;">
   <canvas id="mainCanvas" width="1280" height="900"></canvas>
@@ -16,7 +16,7 @@ kodkodcad
   <div class="window" id="window3" style="top:445px;left:0px;width:600px;height:440px;"></div>
   <div class="window" id="window4" style="top:445px;left:602px;width:600px;height:440px;"></div>
 </div>
-<div id="command" style="float:left;width:200px;height:1000px;border: solid 1px #000">
+<div id="command">
   
 <div>
 </body>
